Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105621

Lingering bad cursor when dragging an undocked window over a textfield

    XMLWordPrintable

Details

    • f35e5a44b0 (qt/qtbase/dev) f10b467a0b (qt/qtbase/6.4) f10b467a0b (qt/tqtc-qtbase/6.4) f35e5a44b0 (qt/tqtc-qtbase/dev)

    Description

      Reproduction steps:

      Build the dock windows example: examples/widgets/mainwindows/dockwidgets

      Run and undock a widget, move it about quickly so that the cursor becomes a caret

      Actual: The cursor remains a caret even when you stop dragging the window and simply select items in the window

      Expected: The cursor should follow any cursor setting that the window has

      Attachments

        For Gerrit Dashboard: QTBUG-105621
        # Subject Branch Project Status CR V

        Activity

          People

            mikolaj.boc Mikołaj Boc (Inactive)
            mikolaj.boc Mikołaj Boc (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes